# Nen_OpenGL_Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/: PCH.hpp  UserInterface.hpp  configloader.hpp  gameState.hpp  playerController.hpp  resourceloader.hpp  scene.hpp  windowManager.hpp
include/Rendering/: camera.hpp  lighting.hpp  mesh.hpp  model.hpp  renderDefs.h  renderState.hpp  shader.hpp  skybox.hpp  texture.hpp
resources/config/: keybinds.toml  radiance.toml  settings.toml  skybox.toml
resources/config/models/: Box.toml  DamagedHelmet.toml  SFHelmet.toml
resources/shaders/: debug.frag  debug.vert  pbr.frag  pbr.vert  radiance.frag  radiance.vert  skybox.frag  skybox.vert
source/: PCH.cpp  UserInterface.cpp  configloader.cpp  main.cpp  playerController.cpp  resourceloader.cpp  scene.cpp  windowmanager.cpp
source/rendering/: camera.cpp  lighting.cpp  mesh.cpp  model.cpp  renderState.cpp  shader.cpp  skybox.cpp  texture.cpp
